--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -28,6 +28,7 @@ $colors: (
     foreground          : #bbbfc2,
   ),
   other: (
+    link-color          : $main-color,
     border-color        : #8da3cf,
     success-color       : #74da8a,
     info-color          : #5faef7,
