--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.scss
@@ -1,23 +1,16 @@
-// Toolbar
-.profile-toolbar {
-  margin-left: 2px;
-  border-radius: 0;
-  height: 56px;
-}
-
 // Profile container
 .profile-container {
   margin-left: 2px;
-  overflow: overlay;  
+  max-height: calc(100vh - var(--main-header-size) * 2);
 
   .avatar {
     max-width: 64px;
     max-height: 64px;
   }
-}
 
-.star-active {
-  color: var(--other-warning-color)
+  .mat-tab-container {
+    padding: var(--main-padding-size);
+  }
 }
 
 @media only screen and (max-width: 600px) {
