--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -3,14 +3,14 @@
     <div class="mb-1" fxLayout="row" fxLayoutAlign="start center">
 
       <!-- Avatar -->
-      <a *ngIf="day" [routerLink]="[ '/aula/alumno', day?.student?.id ]">
+      <a *ngIf="day?.student" [routerLink]="[ '/aula/alumno', day?.student?.id ]">
         <img class="avatar avatar-xs p-0 mr-1" [src]="srcImage({img: day?.student?.personal?.avatar})" alt="Avatar">
       </a>
 
       <!-- Header info -->
       <div class="header-info" fxLayout="column" fxLayoutAlign="center">
         <span class="mat-h3 mb-q header-info-title">{{day?.title}}</span>
-        <span class="mat-small mat-hint header-info-name">{{day?.student?.personal?.name}}</span>
+        <span *ngIf="day?.student" class="mat-small mat-hint header-info-name">{{day?.student?.personal?.name}}</span>
       </div>
     </div>
 
@@ -20,7 +20,7 @@
     <!-- Date -->
     <span class="mat-small mat-hint text-date">{{day?.date | date: 'd MMM, yy'}}</span>
   </div>
-  <div class="day-container truncate-2">
+  <div class="day-container truncate-2" [ngClass]="{'mat-hint': !day?.student}">
     {{day?.content | stripHTML}}
   </div>
 </mat-card>
