--- a/src/app/shared/components/day-creation/day-creation.component.scss
+++ b/src/app/shared/components/day-creation/day-creation.component.scss
@@ -1,11 +1,7 @@
-mat-form-field {
+mat-form-field,
+a13-select-student {
   width: 100%;
   padding: 0 5px;
-
-  .avatar-container {
-    position: relative;
-    top:  3px;
-  }
 }
 
 .full {
