--- a/src/app/classroom/components/classroom-creation/classroom-creation.component.html
+++ b/src/app/classroom/components/classroom-creation/classroom-creation.component.html
@@ -22,6 +22,12 @@
 				<input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.CLASSROOMS_NAME' | translate}}"
 					autocomplete="off">
 				<fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
+				<mat-error *ngIf="classroomFormGroup.controls.nameCtrl.hasError('nameTaken')">
+					{{'ERR.CLASSROOM_EXISTS' | translate}}
+				</mat-error>
+				<mat-error *ngIf="classroomFormGroup.controls.nameCtrl.hasError('required')">
+					{{'ERR.FIELD_REQUIRED' | translate}}
+				</mat-error>
 			</mat-form-field>
 
 			<!-- Student list -->
@@ -35,6 +41,7 @@
 <mat-dialog-actions align="end">
 	<button mat-button color="warn" mat-dialog-close
 		attr.aria-label="{{'CANCEL' | translate}}">{{'CANCEL' | translate}}</button>
-	<button class="ml-h" mat-flat-button color="primary" mat-dialog-close [disabled]="classroomFormGroup.invalid"
-		(click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
+	<button class="ml-h" mat-flat-button color="primary" mat-dialog-close
+		[disabled]="classroomFormGroup.invalid || validatingName" (click)="save()"
+		attr.aria-label="{{'SAVE' | translate}}">{{'SAVE' | translate}}</button>
 </mat-dialog-actions>
