--- a/src/app/shared/components/select-student/select-student.component.scss
+++ b/src/app/shared/components/select-student/select-student.component.scss
@@ -2,15 +2,12 @@ mat-form-field {
   width: 100%;
 
   .avatar-container {
-    position: relative;
-    padding-right: 2rem;
 
     .avatar {
-      position: absolute;
-			top: -15px;
-			left: 3px;
-      width: 28px;
-      height: 28px;
+      position: relative;
+      top: 3px;
+      left: 3px;
+      margin-right: 14px;
     }
   }
 }
