Scroll overflow containers

--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -52,7 +52,7 @@
     </div>
 
     <!-- Configuration -->
-    <mat-nav-list class="m-0 p-0">
+    <mat-nav-list class="m-0 p-0 last-item">
       <a mat-list-item [routerLink]="[ '/aula/configuracion' ]" routerLinkActive="active">
         <fa-icon class="mat-hint" icon="cog"></fa-icon>
         <span class="mat-hint pl-h ml-q">{{ 'SETTINGS' | translate}}</span>
