--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container container-padd">
 
   <!-- Days -->
   <ng-container *ngFor="let day of dayList">
