--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -17,3 +17,7 @@ a[mat-list-item].active fa-icon {
   top: 1px;
   margin-right: 10px;
 }
+
+.last-item {
+  box-shadow: -2px 0 2px rgba($color: #000000, $alpha: 0.12);
+}
