--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -1,26 +1,23 @@
-<!-- Profile container -->
-<section class="overflow-scroll-container">
-  <div class="overflow-scroll">
-		<div class="profile-container overflow-scroll-content">
-			<header class="profile-header p-1 mat-card mat-elevation-z0">
-				<div fxLayout="row" fxLayoutAlign="start center" *ngIf="day?.student">
+<section class="container container-nopadd">
+	<div class="profile-container overflow-scroll-content">
+		<header class="profile-header p-1 mat-card mat-elevation-z0">
+			<div fxLayout="row" fxLayoutAlign="start center" *ngIf="day?.student">
 
-					<!-- Avatar -->
-					<a class="avatar border-theme mr-h" [routerLink]="[ '/aula/alumno', day?.studentId ]">
-						<img class="avatar-image p-0 mr-1" [src]="srcImage({img: day?.student?.personal?.avatar})" alt="Avatar">
-					</a>
+				<!-- Avatar -->
+				<a class="avatar border-theme mr-h" [routerLink]="[ '/aula/alumno', day?.studentId ]">
+					<img class="avatar-image p-0 mr-1" [src]="srcImage({img: day?.student?.personal?.avatar})" alt="Avatar">
+				</a>
 
-					<!-- Header info -->
-					<div class="header-info" fxLayout="column" fxLayoutAlign="center">
-						<span class="mat-h3 mb-0 pointer student-name"
-							[routerLink]="[ '/aula/alumno', day?.studentId ]">{{day?.student?.personal?.name}}</span>
-						<span class="mat-small mat-hint">{{day?.date | date: 'fullDate'}}</span>
-					</div>
+				<!-- Header info -->
+				<div class="header-info" fxLayout="column" fxLayoutAlign="center">
+					<span class="mat-h3 mb-0 pointer student-name"
+						[routerLink]="[ '/aula/alumno', day?.studentId ]">{{day?.student?.personal?.name}}</span>
+					<span class="mat-small mat-hint">{{day?.date | date: 'fullDate'}}</span>
 				</div>
-			</header>
+			</div>
+		</header>
 
-			<!-- Content -->
-			<div class="day-container" [innerHTML]="day?.content"></div>
-		</div>
+		<!-- Content -->
+		<div class="padding-content" [innerHTML]="day?.content"></div>
 	</div>
 </section>
