--- a/src/app/classroom/students/components/student-list/student-list.component.html
+++ b/src/app/classroom/students/components/student-list/student-list.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container container-padd">
 
   <!-- Filter -->
   <mat-form-field appearance="outline">
