Subjects and classrooms recursive OK

--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -29,6 +29,10 @@
 					{{'ERR.FIELD_REQUIRED' | translate}}
 				</mat-error>
 			</mat-form-field>
+
+			<!-- Student list -->
+			<a13-select-student [multiple]="true" formControlName="studentListCtrl" hint="HINT.SUBJECT_STUDENT_LIST">
+			</a13-select-student>
 		</div>
 	</form>
 
