--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -6,7 +6,7 @@
   </ng-container>
 
   <!-- Empty list -->
-  <h3 *ngIf="!dayList.length" class="mat-h1 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
+  <h3 *ngIf="!dayList.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
 
   <!-- Floating button -->
   <a13-floating-button text="DAY.ADD" icon="add" (click)="createDay()"></a13-floating-button>
